<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/initialCoordinatesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_coordinates"/>

    <EditText
        android:id="@+id/xCoordinateEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/initialCoordinatesTextView"
        android:inputType="number"
        android:maxLength="1"
        android:hint="@string/x"/>

    <EditText
        android:id="@+id/yCoordinateEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/xCoordinateEditText"
        android:inputType="number"
        android:maxLength="1"
        android:hint="@string/y"/>

    <Spinner
        android:id="@+id/compassPointsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/yCoordinateEditText"/>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="70dp" />

    <Button
        android:id="@+id/placeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guidelineLeft"
        android:text="@string/place"/>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <Button
        android:id="@+id/moveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH1"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        android:enabled="false"
        android:text="@string/move"/>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <Button
        android:id="@+id/reportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH1"
        app:layout_constraintLeft_toRightOf="@+id/guidelineRight"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="false"
        android:text="@string/report"/>

    <Button
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/placeButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guidelineLeft"
        android:enabled="false"
        android:text="@string/left"/>

    <Button
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/reportButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/guidelineRight"
        android:enabled="false"
        android:text="@string/right"/>

</android.support.constraint.ConstraintLayout>